[package]
name = "neqo-http3"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
# FIXME: These benches have a high rate of variability and are hence not very useful
# in their current form. See https://github.com/mozilla/neqo/issues/2804
autobenches = false

[lints]
workspace = true

[dependencies]
enumset = { workspace = true }
http = { workspace = true }
log = { workspace = true }
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-qpack = { path = "./../neqo-qpack" }
neqo-transport = { path = "./../neqo-transport" }
qlog = { workspace = true }
rustc-hash = { workspace = true }
sfv = { version = "0.14", default-features = false, features = ["parsed-types"] }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
neqo-http3 = { path = ".", features = ["draft-29"] }
test-fixture = { path = "../test-fixture" }

[features]
bench = [
        "neqo-common/bench",
        "neqo-crypto/bench",
        "neqo-qpack/bench",
        "neqo-transport/bench",
        "log/release_max_level_info",
]
build-fuzzing-corpus = [
        "neqo-common/build-fuzzing-corpus",
        "neqo-transport/disable-encryption",
        "neqo-crypto/disable-encryption",
        "neqo-crypto/disable-random",
        "test-fixture/disable-random",
]
disable-encryption = ["neqo-transport/disable-encryption", "neqo-crypto/disable-encryption"]
draft-29 = ["neqo-transport/draft-29"]

[package.metadata.cargo-machete]
ignored = ["criterion", "log"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[package.metadata.bench]]
name = "streams_simulated"
codspeed.mode = "simulation"
codspeed.memory = false # Memory profiling is incompatible with iter_custom() because CodSpeed's instrumentation hooks are bypassed.

[[package.metadata.bench]]
name = "streams_walltime"
codspeed.mode = "walltime"
codspeed.memory = false # FIXME: Disabled due to high variance in results.

[[bench]]
name = "streams_walltime"
harness = false
required-features = ["bench"]

[[bench]]
name = "streams_simulated"
harness = false
required-features = ["bench"]
