[package]
name = "neqo-interop"
description = "A QUIC interop client."
version = "0.7.0"
authors = ["EKR <ekr@rtfm.com>"]
edition = "2018"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4"
neqo-common = { path="./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-http3 = { path = "./../neqo-http3" }
neqo-qpack = { path = "./../neqo-qpack" }
neqo-transport = { path = "./../neqo-transport" }

[features]
deny-warnings = []
