[package]
name = "neqo-interop"
description = "A QUIC interop client."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# neqo-interop is not used in Firefox, so we can be liberal with dependency versions
clap = { version = "4.4", features = ["derive"] }
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-http3 = { path = "./../neqo-http3" }
neqo-qpack = { path = "./../neqo-qpack" }
neqo-transport = { path = "./../neqo-transport" }

[features]
deny-warnings = []
