[package]
name = "neqo-qpack"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Sync with https://searchfox.org/mozilla-central/source/Cargo.lock 2024-02-08
log = { version = "0.4", default-features = false }
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-transport = { path = "./../neqo-transport" }
qlog = { version = "0.12", default-features = false }
static_assertions = { version = "1.1", default-features = false }

[dev-dependencies]
test-fixture = { path = "../test-fixture" }
