[package]
name = "neqo-qpack"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
log = { workspace = true }
neqo-common = { path = "./../neqo-common" }
neqo-transport = { path = "./../neqo-transport" }
qlog = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
test-fixture = { path = "../test-fixture" }

[package.metadata.cargo-machete]
ignored = ["log"]

[features]
bench = ["neqo-common/bench", "neqo-transport/bench"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
