[package]
name = "neqo-server"
description = "A basic HTTP3 server."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# neqo-server is not used in Firefox, so we can be liberal with dependency versions
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
log = { version = "0.4", default-features = false }
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-http3 = { path = "./../neqo-http3" }
neqo-qpack = { path = "./../neqo-qpack" }
neqo-transport = { path = "./../neqo-transport" }
qlog = "0.12"
regex = "1.9"
tokio = { version = "1", features = ["net", "time", "macros", "rt", "rt-multi-thread"] }

[features]
deny-warnings = []
