[package]
name = "neqo-transport"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# Checked against https://searchfox.org/mozilla-central/source/Cargo.lock 2024-11-11
enum-map = { workspace = true }
enumset = { workspace = true }
indexmap = { version = "2.2", default-features = false } # See https://github.com/mozilla/neqo/issues/1858
log = { workspace = true }
neqo-common = { path = "../neqo-common" }
neqo-crypto = { path = "../neqo-crypto" }
mtu = { path = "../mtu" }
qlog = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { version = "1.13", default-features = false, features = ["union", "const_generics"] }
static_assertions = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
neqo-transport = { path = ".", features = ["draft-29"] }
test-fixture = { path = "../test-fixture" }

[features]
bench = ["neqo-common/bench", "neqo-crypto/bench"]
build-fuzzing-corpus = [
        "neqo-common/build-fuzzing-corpus",
        "neqo-crypto/disable-encryption",
        "neqo-crypto/disable-random",
        "test-fixture/disable-random",
]
disable-encryption = ["neqo-crypto/disable-encryption"]
draft-29 = []
gecko = ["mtu/gecko"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "transfer"
harness = false
required-features = ["bench"]

[[bench]]
name = "rx_stream_orderer"
harness = false
required-features = ["bench"]

[[bench]]
name = "range_tracker"
harness = false
required-features = ["bench"]

[[bench]]
name = "sent_packets"
harness = false
required-features = ["bench"]

[[bench]]
name = "min_bandwidth"
harness = false
required-features = ["bench"]
