[package]
name = "neqo-transport"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
autobenches = false

[lints]
workspace = true

[dependencies]
# Checked against https://searchfox.org/mozilla-central/source/Cargo.lock 2024-11-11
enum-map = { workspace = true }
enumset = { workspace = true }
indexmap = { version = "2", default-features = false } # See https://github.com/mozilla/neqo/issues/1858
log = { workspace = true }
neqo-common = { path = "../neqo-common" }
nss = { workspace = true }
mtu = { path = "../mtu" }
qlog = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { version = "1", default-features = false, features = ["union", "const_generics"] }
static_assertions = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "4", package = "codspeed-criterion-compat", default-features = false }
neqo-transport = { path = ".", default-features = false, features = ["draft-29"] }
test-fixture = { path = "../test-fixture" }

[features]
bench = ["neqo-common/bench", "nss/bench", "blapi", "test-fixture/bench", "log/release_max_level_info"]
blapi = ["nss/blapi"]
default = ["blapi"]
build-fuzzing-corpus = [
        "neqo-common/build-fuzzing-corpus",
        "nss/disable-encryption",
        "nss/disable-random",
        "test-fixture/disable-random",
]
disable-encryption = ["nss/disable-encryption"]
draft-29 = []
gecko = [] # mtu no longer requires a gecko feature; kept for compatibility with downstream consumers

[package.metadata.cargo-machete]
ignored = ["criterion"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[package.metadata.bench]]
name = "transfer_walltime"
codspeed.mode = "walltime"
codspeed.memory = false # FIXME: Disabled due to high variance in results.

[[package.metadata.bench]]
name = "transfer_simulated"
codspeed.mode = "simulation"
codspeed.memory = false # Memory profiling is incompatible with iter_custom() because CodSpeed's instrumentation hooks are bypassed.

[[package.metadata.bench]]
name = "rx_stream_orderer"
codspeed.mode = "simulation"

[[package.metadata.bench]]
name = "range_tracker"
codspeed.mode = "simulation"

[[package.metadata.bench]]
name = "sent_packets"
codspeed.mode = "simulation"

[[package.metadata.bench]]
name = "min_bandwidth"
codspeed.mode = "simulation"
codspeed.memory = false # Not a Criterion benchmark; plain fn main() with simulated time.

[[package.metadata.bench]]
name = "pacer"
codspeed.mode = "simulation"

[[package.metadata.bench]]
name = "frame_decode"
codspeed.mode = "simulation"

[[package.metadata.bench]]
name = "packet_codec"
codspeed.mode = "simulation"

[[package.metadata.bench]]
name = "send_streams"
codspeed.mode = "simulation"

[[bench]]
name = "transfer_walltime"
harness = false
required-features = ["bench"]

[[bench]]
name = "transfer_simulated"
harness = false
required-features = ["bench"]

[[bench]]
name = "rx_stream_orderer"
harness = false
required-features = ["bench"]

[[bench]]
name = "range_tracker"
harness = false
required-features = ["bench"]

[[bench]]
name = "sent_packets"
harness = false
required-features = ["bench"]

[[bench]]
name = "min_bandwidth"
harness = false
required-features = ["bench"]

[[bench]]
name = "pacer"
harness = false
required-features = ["bench"]

[[bench]]
name = "frame_decode"
harness = false
required-features = ["bench"]

[[bench]]
name = "packet_codec"
harness = false
required-features = ["bench"]

[[bench]]
name = "send_streams"
harness = false
required-features = ["bench"]
