[package]
name = "neqo-udp"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# Checked against https://searchfox.org/mozilla-central/source/Cargo.lock 2024-11-11
log = { workspace = true }
neqo-common = { path = "./../neqo-common" }
quinn-udp = { version = "0.5.6", default-features = false, features = ["direct-log"] }

# Only enable `fast-apple-datapath` on aarch64.
#
# Old MacOS versions (e.g. 10.15) don't fully support `sendmsg_x` and
# `recvmsg_x`, both enabled by `fast-apple-datapath`. Instead of feature gating
# by OS version, simply do so by CPU arch, leveraging the fact that newer MacOS
# devices use ARM.
[target.'cfg(target_arch = "aarch64")'.dependencies]
quinn-udp = { version = "0.5.6", default-features = false, features = ["direct-log", "fast-apple-datapath"] }

[build-dependencies]
cfg_aliases = "0.2"

[package.metadata.cargo-machete]
ignored = ["log"]

[features]
bench = ["neqo-common/bench"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
