[package]
name = "neqo-udp"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
log = { workspace = true }
neqo-common = { path = "./../neqo-common" }
quinn-udp = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target."cfg(windows)".dependencies]
windows = { workspace = true, features = ["Win32_Networking_WinSock"] }

[build-dependencies]
cfg_aliases = "0.2"

[package.metadata.cargo-machete]
ignored = ["cfg_aliases"]

[features]
bench = ["neqo-common/bench", "log/release_max_level_info"]
fast-apple-datapath = ["quinn-udp/fast-apple-datapath"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
