[package]
name = "test-fixture"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
criterion = { workspace = true }
log = { workspace = true }
neqo-common = { path = "../neqo-common", features = ["test-fixture"] }
neqo-crypto = { path = "../neqo-crypto" }
neqo-http3 = { path = "../neqo-http3", features = ["draft-29"] }
neqo-transport = { path = "../neqo-transport", features = ["draft-29"] }
qlog = { workspace = true }

[features]
bench = [
        "neqo-common/bench",
        "neqo-crypto/bench",
        "neqo-http3/bench",
        "neqo-transport/bench",
        "log/release_max_level_info",
]
disable-random = []

[package.metadata.cargo-machete]
ignored = ["log"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
